--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=TP2_CryptoLibrary
+application.vendor=bobmastrolilli
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -26,10 +27,75 @@ dist.archive.excludes=
 dist.dir=dist
 dist.jar=${dist.dir}/TP2_CryptoLibrary.jar
 dist.javadoc.dir=${dist.dir}/javadoc
+endorsed.classpath=
 excludes=
+file.reference.bcmail-jdk13-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcmail-jdk13-153.jar
+file.reference.bcmail-jdk14-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcmail-jdk14-153.jar
+file.reference.bcmail-jdk15on-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcmail-jdk15on-153.jar
+file.reference.bcpg-jdk12-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcpg-jdk12-153.jar
+file.reference.bcpg-jdk13-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcpg-jdk13-153.jar
+file.reference.bcpg-jdk14-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcpg-jdk14-153.jar
+file.reference.bcpg-jdk15on-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcpg-jdk15on-153.jar
+file.reference.bcpkix-jdk12-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcpkix-jdk12-153.jar
+file.reference.bcpkix-jdk13-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcpkix-jdk13-153.jar
+file.reference.bcpkix-jdk14-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcpkix-jdk14-153.jar
+file.reference.bcpkix-jdk15on-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcpkix-jdk15on-153.jar
+file.reference.bcprov-debug-ext-jdk14-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-debug-ext-jdk14-153.jar
+file.reference.bcprov-debug-jdk14-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-debug-jdk14-153.jar
+file.reference.bcprov-debug-jdk15on-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-debug-jdk15on-153.jar
+file.reference.bcprov-ext-debug-jdk14-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-ext-debug-jdk14-153.jar
+file.reference.bcprov-ext-debug-jdk15on-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-ext-debug-jdk15on-153.jar
+file.reference.bcprov-ext-jdk12-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-ext-jdk12-153.jar
+file.reference.bcprov-ext-jdk13-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-ext-jdk13-153.jar
+file.reference.bcprov-ext-jdk14-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-ext-jdk14-153.jar
+file.reference.bcprov-ext-jdk15on-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-ext-jdk15on-153.jar
+file.reference.bcprov-jdk12-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-jdk12-153.jar
+file.reference.bcprov-jdk13-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-jdk13-153.jar
+file.reference.bcprov-jdk14-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-jdk14-153.jar
+file.reference.bcprov-jdk15on-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-jdk15on-153.jar
+file.reference.bctest-jdk12-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bctest-jdk12-153.jar
+file.reference.bctest-jdk13-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bctest-jdk13-153.jar
+file.reference.bctest-jdk14-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bctest-jdk14-153.jar
+file.reference.bctest-jdk15on-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bctest-jdk15on-153.jar
+file.reference.jce-ext-jdk12-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/jce-ext-jdk12-153.jar
+file.reference.jce-ext-jdk13-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/jce-ext-jdk13-153.jar
+file.reference.jce-jdk12-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/jce-jdk12-153.jar
+file.reference.jce-jdk13-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/jce-jdk13-153.jar
 includes=**
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.bcmail-jdk13-153.jar}:\
+    ${file.reference.bcmail-jdk14-153.jar}:\
+    ${file.reference.bcmail-jdk15on-153.jar}:\
+    ${file.reference.bcpg-jdk12-153.jar}:\
+    ${file.reference.bcpg-jdk13-153.jar}:\
+    ${file.reference.bcpg-jdk14-153.jar}:\
+    ${file.reference.bcpg-jdk15on-153.jar}:\
+    ${file.reference.bcpkix-jdk12-153.jar}:\
+    ${file.reference.bcpkix-jdk13-153.jar}:\
+    ${file.reference.bcpkix-jdk14-153.jar}:\
+    ${file.reference.bcpkix-jdk15on-153.jar}:\
+    ${file.reference.bcprov-debug-ext-jdk14-153.jar}:\
+    ${file.reference.bcprov-debug-jdk14-153.jar}:\
+    ${file.reference.bcprov-debug-jdk15on-153.jar}:\
+    ${file.reference.bcprov-ext-debug-jdk14-153.jar}:\
+    ${file.reference.bcprov-ext-debug-jdk15on-153.jar}:\
+    ${file.reference.bcprov-ext-jdk12-153.jar}:\
+    ${file.reference.bcprov-ext-jdk13-153.jar}:\
+    ${file.reference.bcprov-ext-jdk14-153.jar}:\
+    ${file.reference.bcprov-ext-jdk15on-153.jar}:\
+    ${file.reference.bcprov-jdk12-153.jar}:\
+    ${file.reference.bcprov-jdk13-153.jar}:\
+    ${file.reference.bcprov-jdk14-153.jar}:\
+    ${file.reference.bcprov-jdk15on-153.jar}:\
+    ${file.reference.bctest-jdk12-153.jar}:\
+    ${file.reference.bctest-jdk13-153.jar}:\
+    ${file.reference.bctest-jdk14-153.jar}:\
+    ${file.reference.bctest-jdk15on-153.jar}:\
+    ${file.reference.jce-ext-jdk12-153.jar}:\
+    ${file.reference.jce-ext-jdk13-153.jar}:\
+    ${file.reference.jce-jdk12-153.jar}:\
+    ${file.reference.jce-jdk13-153.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
