--- a/src/Utils/Provider.properties
+++ b/src/Utils/Provider.properties
@@ -2,5 +2,5 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-Triumvirat=CryptoCaesar
-Vigenere=ChiffrePolyVigenere
+Triumvirat=Crypto.Triumvirat
+Vigenere=Crypto.Vigenere
