--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -3,7 +3,7 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-application.title=TP2_CryptoLibrary
+application.title=MyCryptoLibrary
 application.vendor=bobmastrolilli
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
@@ -25,77 +25,67 @@ debug.test.classpath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/TP2_CryptoLibrary.jar
+dist.jar=${dist.dir}/MyCryptoLibrary.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.bcmail-jdk13-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcmail-jdk13-153.jar
-file.reference.bcmail-jdk14-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcmail-jdk14-153.jar
-file.reference.bcmail-jdk15on-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcmail-jdk15on-153.jar
-file.reference.bcpg-jdk12-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcpg-jdk12-153.jar
-file.reference.bcpg-jdk13-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcpg-jdk13-153.jar
-file.reference.bcpg-jdk14-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcpg-jdk14-153.jar
-file.reference.bcpg-jdk15on-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcpg-jdk15on-153.jar
-file.reference.bcpkix-jdk12-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcpkix-jdk12-153.jar
-file.reference.bcpkix-jdk13-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcpkix-jdk13-153.jar
-file.reference.bcpkix-jdk14-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcpkix-jdk14-153.jar
-file.reference.bcpkix-jdk15on-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcpkix-jdk15on-153.jar
-file.reference.bcprov-debug-ext-jdk14-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-debug-ext-jdk14-153.jar
-file.reference.bcprov-debug-jdk14-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-debug-jdk14-153.jar
-file.reference.bcprov-debug-jdk15on-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-debug-jdk15on-153.jar
-file.reference.bcprov-ext-debug-jdk14-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-ext-debug-jdk14-153.jar
-file.reference.bcprov-ext-debug-jdk15on-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-ext-debug-jdk15on-153.jar
-file.reference.bcprov-ext-jdk12-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-ext-jdk12-153.jar
-file.reference.bcprov-ext-jdk13-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-ext-jdk13-153.jar
-file.reference.bcprov-ext-jdk14-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-ext-jdk14-153.jar
-file.reference.bcprov-ext-jdk15on-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-ext-jdk15on-153.jar
-file.reference.bcprov-jdk12-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-jdk12-153.jar
-file.reference.bcprov-jdk13-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-jdk13-153.jar
-file.reference.bcprov-jdk14-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-jdk14-153.jar
-file.reference.bcprov-jdk15on-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bcprov-jdk15on-153.jar
-file.reference.bctest-jdk12-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bctest-jdk12-153.jar
-file.reference.bctest-jdk13-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bctest-jdk13-153.jar
-file.reference.bctest-jdk14-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bctest-jdk14-153.jar
-file.reference.bctest-jdk15on-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/bctest-jdk15on-153.jar
-file.reference.jce-ext-jdk12-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/jce-ext-jdk12-153.jar
-file.reference.jce-ext-jdk13-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/jce-ext-jdk13-153.jar
-file.reference.jce-jdk12-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/jce-jdk12-153.jar
-file.reference.jce-jdk13-153.jar=/Users/bobmastrolilli/Dropbox/M18/vilvens/Ressources/crypto-153/jars/jce-jdk13-153.jar
+file.reference.bcmail-jdk13-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bcmail-jdk13-143.jar
+file.reference.bcmail-jdk14-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bcmail-jdk14-143.jar
+file.reference.bcmail-jdk15-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bcmail-jdk15-143.jar
+file.reference.bcmail-jdk16-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bcmail-jdk16-143.jar
+file.reference.bcpg-jdk12-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bcpg-jdk12-143.jar
+file.reference.bcpg-jdk13-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bcpg-jdk13-143.jar
+file.reference.bcpg-jdk14-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bcpg-jdk14-143.jar
+file.reference.bcpg-jdk15-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bcpg-jdk15-143.jar
+file.reference.bcpg-jdk16-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bcpg-jdk16-143.jar
+file.reference.bcprov-jdk12-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bcprov-jdk12-143.jar
+file.reference.bcprov-jdk13-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bcprov-jdk13-143.jar
+file.reference.bcprov-jdk14-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bcprov-jdk14-143.jar
+file.reference.bcprov-jdk15-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bcprov-jdk15-143.jar
+file.reference.bcprov-jdk16-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bcprov-jdk16-143.jar
+file.reference.bctest-jdk12-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bctest-jdk12-143.jar
+file.reference.bctest-jdk13-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bctest-jdk13-143.jar
+file.reference.bctest-jdk14-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bctest-jdk14-143.jar
+file.reference.bctest-jdk15-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bctest-jdk15-143.jar
+file.reference.bctest-jdk16-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bctest-jdk16-143.jar
+file.reference.bctsp-jdk13-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bctsp-jdk13-143.jar
+file.reference.bctsp-jdk14-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bctsp-jdk14-143.jar
+file.reference.bctsp-jdk15-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bctsp-jdk15-143.jar
+file.reference.bctsp-jdk16-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/bctsp-jdk16-143.jar
+file.reference.commons-codec-1.10.jar=/Users/bobmastrolilli/Documents/Ressources/commons-codec-1.10.jar
+file.reference.jce-jdk12-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/jce-jdk12-143.jar
+file.reference.jce-jdk13-143.jar=/Users/bobmastrolilli/Documents/Ressources/crypto-143/jars/jce-jdk13-143.jar
+file.reference.jcommon-1.0.17.jar=/Users/bobmastrolilli/Documents/Ressources/jcommon-1.0.17.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.bcmail-jdk13-153.jar}:\
-    ${file.reference.bcmail-jdk14-153.jar}:\
-    ${file.reference.bcmail-jdk15on-153.jar}:\
-    ${file.reference.bcpg-jdk12-153.jar}:\
-    ${file.reference.bcpg-jdk13-153.jar}:\
-    ${file.reference.bcpg-jdk14-153.jar}:\
-    ${file.reference.bcpg-jdk15on-153.jar}:\
-    ${file.reference.bcpkix-jdk12-153.jar}:\
-    ${file.reference.bcpkix-jdk13-153.jar}:\
-    ${file.reference.bcpkix-jdk14-153.jar}:\
-    ${file.reference.bcpkix-jdk15on-153.jar}:\
-    ${file.reference.bcprov-debug-ext-jdk14-153.jar}:\
-    ${file.reference.bcprov-debug-jdk14-153.jar}:\
-    ${file.reference.bcprov-debug-jdk15on-153.jar}:\
-    ${file.reference.bcprov-ext-debug-jdk14-153.jar}:\
-    ${file.reference.bcprov-ext-debug-jdk15on-153.jar}:\
-    ${file.reference.bcprov-ext-jdk12-153.jar}:\
-    ${file.reference.bcprov-ext-jdk13-153.jar}:\
-    ${file.reference.bcprov-ext-jdk14-153.jar}:\
-    ${file.reference.bcprov-ext-jdk15on-153.jar}:\
-    ${file.reference.bcprov-jdk12-153.jar}:\
-    ${file.reference.bcprov-jdk13-153.jar}:\
-    ${file.reference.bcprov-jdk14-153.jar}:\
-    ${file.reference.bcprov-jdk15on-153.jar}:\
-    ${file.reference.bctest-jdk12-153.jar}:\
-    ${file.reference.bctest-jdk13-153.jar}:\
-    ${file.reference.bctest-jdk14-153.jar}:\
-    ${file.reference.bctest-jdk15on-153.jar}:\
-    ${file.reference.jce-ext-jdk12-153.jar}:\
-    ${file.reference.jce-ext-jdk13-153.jar}:\
-    ${file.reference.jce-jdk12-153.jar}:\
-    ${file.reference.jce-jdk13-153.jar}
+    ${file.reference.jcommon-1.0.17.jar}:\
+    ${file.reference.bcmail-jdk13-143.jar}:\
+    ${file.reference.bcmail-jdk14-143.jar}:\
+    ${file.reference.bcmail-jdk15-143.jar}:\
+    ${file.reference.bcmail-jdk16-143.jar}:\
+    ${file.reference.bcpg-jdk12-143.jar}:\
+    ${file.reference.bcpg-jdk13-143.jar}:\
+    ${file.reference.bcpg-jdk14-143.jar}:\
+    ${file.reference.bcpg-jdk15-143.jar}:\
+    ${file.reference.bcpg-jdk16-143.jar}:\
+    ${file.reference.bcprov-jdk12-143.jar}:\
+    ${file.reference.bcprov-jdk13-143.jar}:\
+    ${file.reference.bcprov-jdk14-143.jar}:\
+    ${file.reference.bcprov-jdk15-143.jar}:\
+    ${file.reference.bcprov-jdk16-143.jar}:\
+    ${file.reference.bctest-jdk12-143.jar}:\
+    ${file.reference.bctest-jdk13-143.jar}:\
+    ${file.reference.bctest-jdk14-143.jar}:\
+    ${file.reference.bctest-jdk15-143.jar}:\
+    ${file.reference.bctest-jdk16-143.jar}:\
+    ${file.reference.bctsp-jdk13-143.jar}:\
+    ${file.reference.bctsp-jdk14-143.jar}:\
+    ${file.reference.bctsp-jdk15-143.jar}:\
+    ${file.reference.bctsp-jdk16-143.jar}:\
+    ${file.reference.jce-jdk12-143.jar}:\
+    ${file.reference.jce-jdk13-143.jar}:\
+    ${file.reference.commons-codec-1.10.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
