--- a/src/UtilsCrypto/providerChiffrement.properties
+++ b/src/UtilsCrypto/providerChiffrement.properties
@@ -4,3 +4,5 @@
 
 Crypto.Triumvirat=Crypto.CryptoCaesar
 Crypto.Vigenere=Crypto.ChiffrePolyVigenere
+Authenticate.BouncyCastleDigestProvider=Authenticate.AuthenticateDigestWithKey
+Crypto.ProviderForDES=Crypto.ChiffreDES
